--- a/index.html
+++ b/index.html
@@ -7,6 +7,344 @@
     <link rel="stylesheet" href="css/main.min.css" />
   </head>
   <body>
+    <!-- Navbar -->
+    <nav
+      class="navbar navbar-expand-lg bg-info py-3 pb-4 py-lg-5 align-items-start justify-content-center container-fluid"
+      id="navbar"
+    >
+      <!-- Navbar Container -->
+      <div class="container-xxl container-navbar col-11 col-sm-10 p-0">
+        <!-- Image Logo -->
+        <a class="navbar-brand col-7 col-lg-5" href="">
+          <img
+            src="assets/logo-white.png"
+            class="img-fluid navbar_logo"
+            alt=""
+          />
+        </a>
+        <!-- End Image Logo -->
+        <!-- Toggler && Search Button -->
+        <button class="navbar-toggler mb-auto" type="button">
+          <!-- Search Button -->
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="25px"
+            height="25px"
+            viewBox="0 0 16.899 16.192"
+            class="me-2"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#searchCanvas"
+            aria-controls="searchCanvas"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+            id="rotate"
+          >
+            <g id="search" transform="translate(-162.837 -45.603)" fill="none">
+              <path
+                d="M174.787,57.552a6.993,6.993,0,1,1,.657-.757l4.292,4.293-.706.707Z"
+                stroke="none"
+              />
+              <path
+                d="M 169.8372039794922 58.60295104980469 C 171.4397735595703 58.60295104980469 172.9465942382812 57.97870254516602 174.0800933837891 56.8452033996582 L 174.3862609863281 56.53902053833008 L 174.6438293457031 56.19544219970703 C 175.5008087158203 55.05228424072266 175.9197540283203 53.63264083862305 175.8235015869141 52.19804382324219 C 175.7263793945312 50.75037384033203 175.1072235107422 49.38743209838867 174.0800933837891 48.36030197143555 C 172.9465942382812 47.22680282592773 171.4397735595703 46.60255432128906 169.8372039794922 46.60255432128906 C 168.2346496582031 46.60255432128906 166.7278137207031 47.22680282592773 165.5943145751953 48.36031341552734 C 164.4612426757812 49.49338150024414 163.8372344970703 51.00004196166992 163.8372344970703 52.60275268554688 C 163.8372344970703 54.20546340942383 164.4612426757812 55.71212387084961 165.5943145751953 56.84519195556641 C 166.7278137207031 57.97870254516602 168.2346496582031 58.60295104980469 169.8372039794922 58.60295104980469 M 179.0298004150391 61.79490280151367 L 174.7872009277344 57.55230331420898 C 173.4201049804688 58.91940307617188 171.6286468505859 59.60295104980469 169.8372039794922 59.60295104980469 C 168.0457611083984 59.60295104980469 166.2543029785156 58.91940307617188 164.88720703125 57.55230331420898 C 162.1539001464844 54.81900405883789 162.1539001464844 50.38650131225586 164.88720703125 47.65320205688477 C 166.2543029785156 46.28610229492188 168.0457611083984 45.60255432128906 169.8372039794922 45.60255432128906 C 171.6286468505859 45.60255432128906 173.4201049804688 46.28610229492188 174.7872009277344 47.65320205688477 C 177.2804412841797 50.14643096923828 177.4992218017578 54.05368423461914 175.4439544677734 56.79527282714844 L 179.7362976074219 61.08840179443359 L 179.0298004150391 61.79490280151367 Z"
+                stroke="none"
+                fill="#f0f0f0"
+              />
+            </g>
+          </svg>
+          <!-- End Search Button -->
+          <!-- Toggler Icon (Hamburger)  -->
+          <span
+            class="navbar-toggler-icon text-primary ms-1"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasScrolling"
+            aria-controls="offcanvasScrolling"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          ></span>
+          <!-- End Toggler Icon (Hamburger) -->
+        </button>
+        <!-- End Toggler && Search Button -->
+
+        <!-- Off Canvas Search Input (Reading Glass Icon) -->
+
+        <!-- Canvas search input && results -->
+
+        <div
+          class="offcanvas offcanvas-end bg-info d-lg-none col-10"
+          data-bs-scroll="true"
+          data-bs-backdrop="false"
+          tabindex="-1"
+          id="searchCanvas"
+          aria-labelledby="searchCanvas"
+          style="
+            height: calc(100vh - 103px);
+            position: absolute;
+            margin-top: 103px;
+          "
+        >
+          <div class="offcanvas-header col-12 p-0 mx-auto">
+            <form class="col-10 col-sm-6 mx-auto ps-0 border-bottom border-1">
+              <div
+                class="input-group border-4"
+                id="searchInput"
+                onclick="search()"
+              >
+                <span
+                  class="input-group-text px-0 bg-info border-0"
+                  id="basic-addon1"
+                  role="button"
+                  ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16.899"
+                    height="16.192"
+                    viewBox="0 0 16.899 16.192"
+                  >
+                    <g
+                      id="search"
+                      transform="translate(-162.837 -45.603)"
+                      fill="none"
+                    >
+                      <path
+                        d="M174.787,57.552a6.993,6.993,0,1,1,.657-.757l4.292,4.293-.706.707Z"
+                        stroke="none"
+                      />
+                      <path
+                        d="M 169.8372039794922 58.60295104980469 C 171.4397735595703 58.60295104980469 172.9465942382812 57.97870254516602 174.0800933837891 56.8452033996582 L 174.3862609863281 56.53902053833008 L 174.6438293457031 56.19544219970703 C 175.5008087158203 55.05228424072266 175.9197540283203 53.63264083862305 175.8235015869141 52.19804382324219 C 175.7263793945312 50.75037384033203 175.1072235107422 49.38743209838867 174.0800933837891 48.36030197143555 C 172.9465942382812 47.22680282592773 171.4397735595703 46.60255432128906 169.8372039794922 46.60255432128906 C 168.2346496582031 46.60255432128906 166.7278137207031 47.22680282592773 165.5943145751953 48.36031341552734 C 164.4612426757812 49.49338150024414 163.8372344970703 51.00004196166992 163.8372344970703 52.60275268554688 C 163.8372344970703 54.20546340942383 164.4612426757812 55.71212387084961 165.5943145751953 56.84519195556641 C 166.7278137207031 57.97870254516602 168.2346496582031 58.60295104980469 169.8372039794922 58.60295104980469 M 179.0298004150391 61.79490280151367 L 174.7872009277344 57.55230331420898 C 173.4201049804688 58.91940307617188 171.6286468505859 59.60295104980469 169.8372039794922 59.60295104980469 C 168.0457611083984 59.60295104980469 166.2543029785156 58.91940307617188 164.88720703125 57.55230331420898 C 162.1539001464844 54.81900405883789 162.1539001464844 50.38650131225586 164.88720703125 47.65320205688477 C 166.2543029785156 46.28610229492188 168.0457611083984 45.60255432128906 169.8372039794922 45.60255432128906 C 171.6286468505859 45.60255432128906 173.4201049804688 46.28610229492188 174.7872009277344 47.65320205688477 C 177.2804412841797 50.14643096923828 177.4992218017578 54.05368423461914 175.4439544677734 56.79527282714844 L 179.7362976074219 61.08840179443359 L 179.0298004150391 61.79490280151367 Z"
+                        stroke="none"
+                        fill="#fff"
+                      />
+                    </g>
+                  </svg>
+                </span>
+                <input
+                  type="text"
+                  class="form-control bg-info border-0 shadow-none text-primary"
+                  placeholder="search"
+                  aria-label="Username"
+                  aria-describedby="basic-addon1"
+                  role="button"
+                />
+              </div>
+            </form>
+          </div>
+          <div class="offcanvas-body mx-auto">
+            <ul
+              id="searchResults"
+              style="display: none"
+              class="p-4 border-0 mx-auto position-relative top-0 ms-0 ps-0"
+              data-bs-toggle="modal"
+              data-bs-target="#articleModal"
+              role="button"
+            ></ul>
+          </div>
+        </div>
+
+        <!-- End Canvas search input && results-->
+
+        <!-- End Off Canvas Search Input (Reading Glass Icon) -->
+
+        <!-- Collapsable Navbar -->
+        <div class="collapse navbar-collapse col-5" id="navbarNav">
+          <!-- Contaier with Navbar -->
+          <div class="ms-auto">
+            <!-- Search Input && Social Media links -->
+            <div class="d-flex align-items-center bg-info">
+              <!-- Search Input && Search Icon -->
+              <form class="ms-auto ps-0 border-bottom border-1">
+                <div
+                  class="input-group border-4"
+                  id="searchInput2"
+                  onclick="search2()"
+                >
+                  <span
+                    class="input-group-text px-0 bg-info border-0"
+                    id="basic-addon1"
+                    role="button"
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="16.899"
+                      height="16.192"
+                      viewBox="0 0 16.899 16.192"
+                    >
+                      <g
+                        id="search"
+                        transform="translate(-162.837 -45.603)"
+                        fill="none"
+                      >
+                        <path
+                          d="M174.787,57.552a6.993,6.993,0,1,1,.657-.757l4.292,4.293-.706.707Z"
+                          stroke="none"
+                        />
+                        <path
+                          d="M 169.8372039794922 58.60295104980469 C 171.4397735595703 58.60295104980469 172.9465942382812 57.97870254516602 174.0800933837891 56.8452033996582 L 174.3862609863281 56.53902053833008 L 174.6438293457031 56.19544219970703 C 175.5008087158203 55.05228424072266 175.9197540283203 53.63264083862305 175.8235015869141 52.19804382324219 C 175.7263793945312 50.75037384033203 175.1072235107422 49.38743209838867 174.0800933837891 48.36030197143555 C 172.9465942382812 47.22680282592773 171.4397735595703 46.60255432128906 169.8372039794922 46.60255432128906 C 168.2346496582031 46.60255432128906 166.7278137207031 47.22680282592773 165.5943145751953 48.36031341552734 C 164.4612426757812 49.49338150024414 163.8372344970703 51.00004196166992 163.8372344970703 52.60275268554688 C 163.8372344970703 54.20546340942383 164.4612426757812 55.71212387084961 165.5943145751953 56.84519195556641 C 166.7278137207031 57.97870254516602 168.2346496582031 58.60295104980469 169.8372039794922 58.60295104980469 M 179.0298004150391 61.79490280151367 L 174.7872009277344 57.55230331420898 C 173.4201049804688 58.91940307617188 171.6286468505859 59.60295104980469 169.8372039794922 59.60295104980469 C 168.0457611083984 59.60295104980469 166.2543029785156 58.91940307617188 164.88720703125 57.55230331420898 C 162.1539001464844 54.81900405883789 162.1539001464844 50.38650131225586 164.88720703125 47.65320205688477 C 166.2543029785156 46.28610229492188 168.0457611083984 45.60255432128906 169.8372039794922 45.60255432128906 C 171.6286468505859 45.60255432128906 173.4201049804688 46.28610229492188 174.7872009277344 47.65320205688477 C 177.2804412841797 50.14643096923828 177.4992218017578 54.05368423461914 175.4439544677734 56.79527282714844 L 179.7362976074219 61.08840179443359 L 179.0298004150391 61.79490280151367 Z"
+                          stroke="none"
+                          fill="#fff"
+                        />
+                      </g>
+                    </svg>
+                  </span>
+                  <input
+                    type="text"
+                    id="searchInputContainer"
+                    class="form-control bg-info border-0 shadow-none text-primary"
+                    placeholder="search"
+                    aria-label="Username"
+                    aria-describedby="basic-addon1"
+                    role="button"
+                  />
+                </div>
+              </form>
+              <!-- End Search Input && Search Icon  -->
+
+              <!-- TODO: Search Results list -->
+
+              <ul
+                id="searchResults2"
+                style="display: none"
+                class="p-4"
+                data-bs-toggle="modal"
+                data-bs-target="#articleModal"
+                role="button"
+              ></ul>
+
+              <!-- End Search Results list -->
+
+              <!-- Social Media Icons -->
+              <a href=""
+                ><i class="fa-brands translate-y ps-3 fa-linkedin-in"></i>
+              </a>
+              <a href=""
+                ><i class="fa-brands translate-y ps-3 fa-twitter"></i>
+              </a>
+              <a href=""
+                ><i class="fa-brands translate-y ps-3 fa-instagram"></i>
+              </a>
+              <a href=""
+                ><i class="fa-brands translate-y ps-3 fa-facebook"></i>
+              </a>
+              <!-- End Social Media Icons -->
+            </div>
+            <!-- End Search Input && Social Media links -->
+
+            <!-- Navbar Navigation -->
+            <ul class="navbar-nav mt-lg-1">
+              <!-- Links Page Sections -->
+              <li class="nav-item pe-1">
+                <a
+                  class="nav-link text-primary active line-bottom"
+                  aria-current="page"
+                  href="#"
+                  >About us</a
+                >
+              </li>
+              <li class="nav-item px-1">
+                <a class="nav-link text-primary line-bottom" href="#">Events</a>
+              </li>
+              <li class="nav-item px-1">
+                <a class="nav-link text-primary line-bottom" href="#"
+                  >Nordic master</a
+                >
+              </li>
+              <li class="nav-item px-1">
+                <a class="nav-link text-primary line-bottom" href="#"
+                  >Results</a
+                >
+              </li>
+              <li class="nav-item px-1">
+                <a class="nav-link text-primary line-bottom" href="#">Links</a>
+              </li>
+              <li class="nav-item ps-1">
+                <a class="nav-link text-primary line-bottom pe-0" href="#"
+                  >Contact</a
+                >
+              </li>
+              <!-- End Links Page Sections -->
+            </ul>
+            <!-- End Navbar Navigation -->
+          </div>
+          <!-- End Container with Navbar -->
+        </div>
+        <!-- End Collapsable Navbar -->
+
+        <!-- Off Canvas Toggler Button social media && links-->
+
+        <div
+          class="offcanvas offcanvas-end bg-info d-lg-none col-10"
+          data-bs-scroll="true"
+          data-bs-backdrop="false"
+          tabindex="-1"
+          id="offcanvasScrolling"
+          aria-labelledby="offcanvasScrollingLabel"
+          style="
+            height: calc(100vh - 103px);
+            position: absolute;
+            margin-top: 103px;
+          "
+        >
+          <div class="offcanvas-header col-10 p-0 mx-auto">
+            <ul class="navbar-nav mt-lg-1 gap-2">
+              <!-- Links Page Sections -->
+              <li class="nav-item pe-1 h3 d-inline-flex">
+                <a
+                  class="nav-link text-primary active line-bottom"
+                  aria-current="page"
+                  href="#"
+                  >About us</a
+                >
+              </li>
+              <li class="nav-item px-1 h3 d-inline-flex">
+                <a class="nav-link text-primary line-bottom" href="#">Events</a>
+              </li>
+              <li class="nav-item px-1 h3 d-inline-flex">
+                <a class="nav-link text-primary line-bottom" href="#"
+                  >Nordic master</a
+                >
+              </li>
+              <li class="nav-item px-1 h3 d-inline-flex">
+                <a class="nav-link text-primary line-bottom" href="#"
+                  >Results</a
+                >
+              </li>
+              <li class="nav-item px-1 h3 d-inline-flex">
+                <a class="nav-link text-primary line-bottom" href="#">Links</a>
+              </li>
+              <li class="nav-item ps-1 h3 d-inline-flex">
+                <a class="nav-link text-primary line-bottom pe-0" href="#"
+                  >Contact</a
+                >
+              </li>
+              <!-- End Links Page Sections -->
+            </ul>
+          </div>
+          <div
+            class="offcanvas-body d-flex align-items-end justify-content-between col-6 col-sm-4 pb-6 mx-auto"
+          >
+            <!-- Social Media Icons -->
+
+            <a href=""
+              ><i class="fa-brands fs-5 translate-y fa-linkedin-in"></i>
+            </a>
+            <a href=""
+              ><i class="fa-brands fs-5 translate-y fa-twitter"></i>
+            </a>
+            <a href=""
+              ><i class="fa-brands fs-5 translate-y fa-instagram"></i>
+            </a>
+            <a href=""
+              ><i class="fa-brands fs-5 translate-y fa-facebook"></i>
+            </a>
+
+            <!-- End Social Media Icons -->
+          </div>
+        </div>
+
+        <!-- End Off Canvas Toggler Button social media && links -->
+      </div>
+      <!-- End Navbar Container -->
+    </nav>
+
+    <!-- End Navbar -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
