--- a/index.html
+++ b/index.html
@@ -345,6 +345,132 @@
 
     <!-- End Navbar -->
 
+    <!-- Hero Section -->
+
+    <section class="hero p-0 d-flex justify-content-center">
+      <!-- Container with Section-1 -->
+      <div class="hero_container container-xxl col-12 col-lg-10 p-0">
+        <!-- Sliders -->
+        <div
+          id="carouselExampleCaptions"
+          class="carousel slide slider-image p-0"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <!-- Slider 1 -->
+            <div class="carousel-item slider-image active">
+              <!-- Image Slider-1 -->
+              <img
+                src="assets/sliders/slider-1.jpg"
+                class="d-block w-100 h-100"
+                alt="..."
+              />
+              <!-- End Image Slider-1 -->
+              <!-- Caption Slider-1  -->
+              <div
+                class="carousel-caption col-11 col-sm-10 position-static h-s-img p-0 mx-auto"
+              >
+                <div
+                  class="bg-info col-12 col-lg-8 h-s-img mt-0 me-auto d-flex justify-content-center align-items-center text-caption"
+                >
+                  <q class="fs-1 my-xl-3 py-lg-4 px-3 px-lg-5 max-wch lh-base">
+                    To create an environment in which knowledge about coffee and
+                    its sphere can be obtained
+                  </q>
+                </div>
+              </div>
+
+              <!-- End Caption Slider-1  -->
+            </div>
+            <!-- End Slider 1 -->
+
+            <!-- Slider 2 -->
+            <div class="carousel-item slider-image">
+              <!-- Image Slider-2 -->
+              <img
+                src="assets/sliders/slider-2.jpg"
+                class="d-block w-100 h-100"
+                alt="..."
+              />
+              <!-- End Image Slide-2 -->
+
+              <!-- Caption Slider-2 -->
+              <div
+                class="carousel-caption col-11 col-sm-10 position-static h-s-img p-0 mx-auto"
+              >
+                <div
+                  class="bg-info col-12 col-lg-8 h-s-img mt-0 me-auto d-flex justify-content-center align-items-center text-caption"
+                >
+                  <q class="fs-1 my-xl-3 py-lg-4 px-3 px-lg-5 max-wch lh-base">
+                    This is a great introduction do the coffee industry's best
+                    beans on the planet
+                  </q>
+                </div>
+              </div>
+              <!-- End Caption Slider-2 -->
+            </div>
+            <!-- End Slider 2 -->
+
+            <!-- Slider 3 -->
+            <div class="carousel-item slider-image">
+              <!-- Image Slider-3 -->
+              <img
+                src="assets/sliders/slider-3.jpg"
+                class="d-block w-100 h-100"
+                alt="..."
+              />
+              <!-- End Image Slider-3 -->
+              <!-- Caption Slider-3 -->
+              <div
+                class="carousel-caption col-11 col-sm-10 position-static h-s-img p-0 mx-auto"
+              >
+                <div
+                  class="bg-info col-12 col-lg-8 h-s-img mt-0 me-auto d-flex justify-content-center align-items-center text-caption"
+                >
+                  <q class="fs-1 my-xl-3 py-lg-4 px-3 px-lg-5 max-wch lh-base">
+                    Coffee in code out, this is the wayt of the eternal life and
+                    empovernment of the soul
+                  </q>
+                </div>
+              </div>
+              <!-- End Caption Slider-3 -->
+            </div>
+            <!-- End Slider 3 -->
+          </div>
+          <!-- Button Sliders -->
+
+          <!-- Button Prev -->
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <!-- End Button Prev -->
+
+          <!-- Button Next -->
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+          <!-- End Button Next -->
+          <!-- End Button Sliders -->
+        </div>
+        <!-- End Sliders -->
+      </div>
+      <!-- End Container with Section-1-->
+    </section>
+
+    <!-- End Hero Section-->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
