--- a/index.html
+++ b/index.html
@@ -471,6 +471,118 @@
 
     <!-- End Hero Section-->
 
+    <!-- Info Section -->
+    <section class="container-xxl info col-lg-10 p-0">
+      <!-- Container margin&%height-->
+      <div
+        class="row mt-lg-0 mx-auto p-0 col-11 col-sm-10 col-lg-10 overflow-x-hidden"
+      >
+        <!-- Card Groups -->
+        <div class="col-12 col-lg-8 overflow-x-hidden p-0 order-lg-1">
+          <div class="row row-cols-1 gap-5" id="data-container">
+            <!-- Card 1 -->
+
+            <!-- End Card 1 -->
+
+            <!-- Card 2 -->
+
+            <!-- End Card 2 -->
+
+            <!-- Card 3 -->
+
+            <!-- End Card 3 -->
+
+            <!-- Card 4 -->
+
+            <!-- End Card 4 -->
+
+            <!-- Hr line -->
+            <hr class="mx-0 my-4 px-0" />
+          </div>
+          <ul class="pagination" id="pagination"></ul>
+        </div>
+        <!-- End Card Groups -->
+
+         <!-- ASIDE  Info -->
+         <aside class="col-lg ms-lg-5 order-3 order-lg-2 p-0 px-lg-3">
+          <!-- WBC SHOP -->
+          <h3>WBC SHOP</h3>
+          <p class="mt-3 mt-lg-0">Your shopping card is empty</p>
+          <button type="button" class="btn btn-lg btn-outline-dark rounded-0">
+            Visit the shop
+          </button>
+          <hr class="my-5" />
+          <!-- End WBC SHOP -->
+
+          <!--  Next Event-->
+          <h3 class="mb-3">Next event</h3>
+          <h3 class="mb-1">World Barista Cup 2021</h3>
+          <p class="mb-lg-0 h5">Copenhagen, Denmark</p>
+          <p class="mb-lg-0 h5">Dates: 25th - 27th Augut 2011</p>
+          <p class="h5">Theme: SENSORY</p>
+          <button
+            type="button"
+            class="btn btn-lg btn-outline-dark rounded-0 mb-0 mb-lg-4 mt-2"
+          >
+            Sign up now
+          </button>
+          <hr class="my-5" />
+          <!-- End Next Event -->
+
+          <!-- Scoreboard -->
+          <h3 class="mb-3">Scoreboard</h3>
+          <h3 class="mb-3 mb-lg-1">List of winners from last year</h3>
+          <p class="mb-1 mb-lg-0 h5">2021 - ?</p>
+          <p class="mb-1 mb-lg-0 h5">2020 - Denmark</p>
+          <p class="mb-1 mb-lg-0 h5">2021 - Sweden</p>
+          <p class="mb-1 mb-lg-0 h5">2021 - Turkey</p>
+          <p class="mb-1 mb-lg-0 h5">2021 - Italy</p>
+          <p class="mb-1 mb-lg-0 h5">2021 - Italy</p>
+          <p class="mb-1 mb-lg-0 h5">2021 - Germany</p>
+          <!-- End Scoreboard -->
+
+          <!-- Hr visible below lg-screen -->
+          <hr class="d-block d-lg-none mt-5" />
+        </aside>
+        <!-- End ASIDE Info -->
+
+        <!-- Articles Toggler -->
+        <div
+          class="col-12 col-lg-8 d-flex flex-direction-column justify-content-between p-0 order-2 order-lg-3"
+        >
+          <!-- Button Prev -->
+          <button
+            type="button"
+            class="btn btn-lg btn-outline-dark rounded-0"
+            id="prevButton"
+          >
+            Previous
+          </button>
+          <!-- End Button Prev -->
+          <p class="my-auto" id="pageDescription">Page 1 of 3</p>
+          <!-- Button Next -->
+          <button
+            type="button"
+            class="btn btn-lg btn-outline-dark rounded-0"
+            id="nextButton"
+          >
+            Next
+          </button>
+          <!-- End Button Next -->
+
+          <!-- Hr Line visible below lg device -->
+        </div>
+        <hr class="order-2 my-5 d-block d-lg-none" />
+        <!-- End Articler Toggler -->
+      </div>
+      <hr class="d-none d-lg-block my-5 col-8 mx-auto" />
+      <!-- End Container margin&&height -->
+      </div>
+      <hr class="d-none d-lg-block my-5 col-8 mx-auto" />
+      <!-- End Container margin&&height -->
+    </section>
+    <!-- End Info Section-->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
