Add Modal Popup Articles.

--- a/index.html
+++ b/index.html
@@ -503,6 +503,101 @@
         </div>
         <!-- End Card Groups -->
 
+          <!-- Modal Pop Up -->
+          
+          <div
+          class="modal fade"
+          id="articleModal"
+          data-bs-backdrop="static"
+          data-bs-keyboard="false"
+          tabindex="-1"
+          aria-labelledby="articleModalLabel"
+          aria-hidden="true"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        >
+          <div class="modal-dialog container-xxl col-12">
+            <div class="modal-content">
+              <div class="modal-header p-0 vh-25" data-bs-theme="dark">
+                <img
+                  src="assets/images/posts/Post thumbnail-4.png"
+                  class="col-12 p-0 m-0 object-fit-cover img-fluid image-modal"
+                  alt="..."
+                />
+                <button
+                  disabled
+                  type="button"
+                  class="btn-close btn-lg position-absolute top-0 start-100 m-0 bg-primary rounded-0 opacity-100 h4 p-2"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <h1 class="modal-title fs-1" id="articleModalLabel">
+                  Wonderful Copenhagen
+                </h1>
+                <p class="card-text text-warning h4 mt-2">
+                  Published 12/07/2021
+                </p>
+                <p class="h5 lh-base mt-3">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Eligendi consectetur ea ipsam dolores! Laboriosam eveniet qui
+                  vel minus inventore id esse commodi unde quidem culpa a, quo
+                  dicta ad dolores deserunt quisquam necessitatibus, incidunt
+                  assumenda voluptatibus atque nobis earum odit.
+                </p>
+                <p class="h5 lh-base mt-5">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Repudiandae commodi ea voluptatibus. Similique rem esse
+                  dolore! Ullam dolorem tempore consequuntur exercitationem,
+                  consectetur maiores, impedit necessitatibus veritatis,
+                  doloribus eligendi molestias quidem modi molestiae. Cum animi
+                  velit maiores repudiandae mollitia praesentium autem.
+                </p>
+                <p class="h5 lh-base mt-5">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Perspiciatis reiciendis molestias illo eligendi id nemo
+                  nesciunt harum voluptatum facilis accusantium dolores quasi,
+                  aut officia similique consectetur sint deleniti non minus.
+                  Accusantium voluptatum, blanditiis, numquam voluptatibus modi
+                  vero tempore nemo inventore autem deserunt, delectus porro
+                  officiis ad a ab aperiam repudiandae?
+                </p>
+                <p class="h5 lh-base mt-5">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Pariatur perferendis doloribus veritatis natus neque tempore.
+                  Nemo cumque perferendis ad itaque corporis atque suscipit
+                  adipisci laborum reprehenderit. Magnam, mollitia eum!
+                  Dignissimos rem aperiam accusantium earum excepturi aspernatur
+                  repudiandae, autem ipsum blanditiis necessitatibus cumque
+                  repellat officia cupiditate.
+                </p>
+                <p class="h5 lh-base mt-5">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Commodi, consectetur et? Quam quia optio error eligendi quidem
+                  maiores dignissimos ipsum. Iste minus labore ab ex itaque, hic
+                  deleniti! Excepturi, delectus dolores dolorum impedit tempore
+                  eius. Facilis quam molestiae amet recusandae.
+                </p>
+                <p class="h5 lh-base mt-5">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Eveniet quae ullam earum, sapiente debitis hic commodi,
+                  repellendus quod architecto cupiditate sequi odit doloribus
+                  asperiores similique adipisci! Aliquam minus aliquid
+                  dignissimos enim, magni maxime quibusdam.
+                </p>
+                <p class="h5 lh-base mt-5">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Commodi, consectetur et? Quam quia optio error eligendi quidem
+                  maiores dignissimos ipsum. Iste minus labore ab ex itaque, hic
+                  deleniti! Excepturi, delectus dolores dolorum impedit tempore
+                  eius. Facilis quam molestiae amet recusandae.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- End Modal Pop Up -->
+
          <!-- ASIDE  Info -->
          <aside class="col-lg ms-lg-5 order-3 order-lg-2 p-0 px-lg-3">
           <!-- WBC SHOP -->
