--- a/index.html
+++ b/index.html
@@ -678,6 +678,142 @@
     </section>
     <!-- End Info Section-->
 
+     <!-- Sponsors Section -->
+     <section class="container-xxl p-0">
+      <!-- Container with Sponsors Section -->
+      <div class="row mt-5 mt-lg-6 mx-auto p-0 col-sm-8 col-lg-10">
+        <!-- Header -->
+        <h2 class="text-center">Nordic Barista Cup Sponsors</h2>
+
+        <!-- Sponsors Images (2-rows)-->
+        <!-- Row-1 Sponsors Images -->
+        <div
+          class="row mb-3 d-lg-flex display-lg-contents justify-content-center"
+        >
+          <img
+            src="assets/images/sponsors/sponsor-20.png"
+            class="img-fluid px-2 px-sm-4 px-lg-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-1.png"
+            class="img-fluid px-2 px-sm-4 p-lg-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-2.png"
+            class="img-fluid px-2 px-sm-4 px-lg-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-3.png"
+            class="img-fluid px-2 px-sm-4 px-lg-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-4.png"
+            class="img-fluid px-2 px-sm-4 px-lg-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-5.png"
+            class="img-fluid px-2 px-sm-4 px-lg-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-6.png"
+            class="img-fluid px-2 px-sm-4 px-lg-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-7.png"
+            class="img-fluid px-2 px-sm-4 px-lg-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-8.png"
+            class="img-fluid px-2 px-sm-4 px-lg-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-9.png"
+            class="img-fluid px-2 px-sm-4 px-lg-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+        </div>
+        <!-- End Row-1 Sponsors Images -->
+        <!-- Row-2 Sponsors Images -->
+        <div class="row d-lg-flex display-lg-contents justify-content-center">
+          <img
+            src="assets/images/sponsors/sponsor-10.png"
+            class="img-fluid px-2 px-sm-4 px-lg-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-11.png"
+            class="img-fluid px-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-12.png"
+            class="img-fluid px-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-13.png"
+            class="img-fluid px-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-14.png"
+            class="img-fluid px-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-15.png"
+            class="img-fluid px-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-16.png"
+            class="img-fluid px-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-17.png"
+            class="img-fluid px-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-18.png"
+            class="img-fluid px-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-19.png"
+            class="img-fluid px-2 px-sm-4 px-lg-2 col-4 col-lg-1"
+            alt="Sponsor logo."
+          />
+          <!-- Sponsors Img's shown below lg-screen -->
+          <img
+            src="assets/images/sponsors/sponsor-40.png"
+            class="img-fluid px-2 px-lg-2 col-4 col-lg-1 d-lg-none"
+            alt="Sponsor logo."
+          />
+          <img
+            src="assets/images/sponsors/sponsor-41.png"
+            class="img-fluid px-2 px-lg-2 col-4 col-lg-1 d-lg-none"
+            alt="Sponsor logo."
+          />
+          <!-- End Sponsors Img's shown below lg-screen ---->
+        </div>
+        <!-- End Row-2 Sponsors Images -->
+        <!-- End Sponsors Images -->
+      </div>
+      <!-- End Container with Sponsors Section -->
+    </section>
+    <!-- End Sponsors Section -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
