Clean entire code.

--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@
           </div>
           <!-- Button Sliders -->
 
+          
           <!-- Button Prev -->
           <button
             class="carousel-control-prev"
@@ -497,8 +498,8 @@
             <!-- End Card 4 -->
 
             <!-- Hr line -->
-            <hr class="mx-0 my-4 px-0" />
           </div>
+          <hr class="mx-0 my-4 px-0 mt-5" />
           <ul class="pagination" id="pagination"></ul>
         </div>
         <!-- End Card Groups -->
@@ -641,6 +642,7 @@
         </aside>
         <!-- End ASIDE Info -->
 
+        <!-- <hr class="d-none d-lg-block my-5 col-8 mx-auto" /> -->
         <!-- Articles Toggler -->
         <div
           class="col-12 col-lg-8 d-flex flex-direction-column justify-content-between p-0 order-2 order-lg-3"
@@ -670,10 +672,10 @@
         <hr class="order-2 my-5 d-block d-lg-none" />
         <!-- End Articler Toggler -->
       </div>
-      <hr class="d-none d-lg-block my-5 col-8 mx-auto" />
+      <!-- <hr class="d-none d-lg-block my-5 col-8 mx-auto" /> -->
       <!-- End Container margin&&height -->
       </div>
-      <hr class="d-none d-lg-block my-5 col-8 mx-auto" />
+      <hr class="d-none d-lg-block my-5 col-10 mx-auto" />
       <!-- End Container margin&&height -->
     </section>
     <!-- End Info Section-->
